package pucminas.biblioteca.modelo;

public enum TipoLeitura {
    OBRIGATORIA,
    LIVRE
}
